--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "raven-js": "^3.27.1",
     "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-autosuggest": "^9.4.3",
-    "react-dom": "^16.8.5",
     "react-ga": "^2.5.7",
     "react-highlight-words": "^0.16.0",
     "react-jss": "^8.6.1",
@@ -89,11 +89,11 @@
     "eslint-watch": "^5.1.2",
     "husky": "^2.3.0",
     "jest": "^24.8.0",
-    "jest-axe": "^3.1.1",
+    "jest-axe": "3.1.1",
     "prettier": "^1.17.1",
     "pretty-quick": "^1.11.0",
     "react-styleguidist": "^9.1.2",
-    "react-test-renderer": "^16.8.5",
+    "react-test-renderer": "16.8.6",
     "start-server-and-test": "^1.9.1",
     "webpack-bundle-analyzer": "^3.3.2"
   }
