--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-ga": "^2.5.7",
     "react-highlight-words": "^0.16.0",
     "react-jss": "^8.6.1",
-    "react-jsx-parser": "^1.17.0",
+    "react-jsx-parser": "1.17.0",
     "react-modal": "^3.8.1",
     "react-redux": "^5.1.1",
     "recompose": "^0.30.0",
